--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -2,12 +2,14 @@
   "store.home": {
     "blocks": [
       "rich-text",
-      "info-card"
+      "info-card",
+      "info-card#button-right",
+      "info-card#button-left"
     ]
   },
   "rich-text": {
     "props": {
-      "text": "**Hello, World!**",
+      "text": "*Hello, World!*",
       "textPosition": "RIGHT"
     }
   },
