--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -39,5 +39,27 @@
       "textAlignment": "center",
       "blockClass": "metal"
     }
+  },
+  "flex-layout.row":{
+    "children": [
+      "info-card#rethink",
+      "rich-text#deletar"
+    ]
+  },
+  
+ "info-card#rethink": {
+    "props": {
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/utensilios-cozinha-min.png",
+      "isFullModeStyle": true,
+      "headline": "Time to rethink your kitchen",
+      "callToActionText": "Discover",
+      "textPosition": "center"
+    }
+  },
+  
+  "rich-text#deletar": {
+    "props": {
+      "text": "I'll be deleted soon"
+    }
   }
 }
