--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -39,8 +39,7 @@
   },
   "flex-layout.row":{
     "children": [
-      "info-card#rethink",
-      "rich-text#deletar"
+      "info-card#rethink"
     ]
   },
   
