--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -4,6 +4,7 @@
       "info-card#button-right",
       "info-card#button-left",
       "flex-layout.row",
+      "flex-layout.col",
       "info-card#rethink",
       "image#electronics",
       "image#major-appliance"
