--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -7,7 +7,8 @@
       "flex-layout.col",
       "info-card#rethink",
       "image#electronics",
-      "image#major-appliance"
+      "image#major-appliance",
+      "shelf"
     ]
   },
   "info-card#button-right": {
